<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent" >

    <!-- Top layout -->

    <RelativeLayout
        android:id="@+id/about_top_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/about_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/about"
            android:textColor="@color/white"
            android:textSize="22dp"
            android:textStyle="bold" />
    </RelativeLayout>
    <!-- End Top layout -->


    <!-- Content layout -->

    <ScrollView
        android:id="@+id/about_content_scrollview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_top_layout"
        android:layout_margin="10dp"
        android:scrollbars="vertical" >

        <RelativeLayout
            android:id="@+id/about_bottom_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

            <ImageView
                android:id="@+id/about_img_quiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/text_thidaihoc" />

            <TextView
                android:id="@+id/about_text_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/about_img_quiz"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/empty"
                android:textSize="14dp" />
        </RelativeLayout>
    </ScrollView>

    <!-- End Content layout -->


    <!-- Bottom layout -->

    <RelativeLayout
        android:id="@+id/about_last_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/donationButton"
            android:layout_width="160dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="105dp"
            android:background="@drawable/paypal"
            android:gravity="center"
            android:onClick="btnDonateOnclick" />
    </RelativeLayout>

</RelativeLayout>